Ajout de NAÏMI Amîr au trombinoscope

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
                     <th scope="col">📧 Email</th>
                 </tr>
             </thead>
-            <tbody>            
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>NAÏMI</td>
+                    <td>Amîr</td>
+                    <td>naimiamir661@gmail.com</td>
+                </tr>  
             </tbody>
         </table>
     </div>
