--- a/index.html
+++ b/index.html
@@ -23,40 +23,40 @@
             </thead>
             <tbody> 
 
-                  <tr>
-                    <td>1</td>
-                    <td>AGBODJOGBE</td>
-                    <td>Christia</td>
-                    <td>yemiagbodjogbe@gmail.com</td>
+                <tr>
+                    <td>1</Td>
+                    <td>BELLO</td>
+                    <td>Moufeed Deen</td>
+                    <td>moufeefbello@gmail.com</td>
                 </tr>
 
-                 <tr>
+                    <tr>
                     <td>2</td>
+                    <td>BONOU</td>
+                    <td>Angelo Mahoutin Djahou</td>
+                    <td>angelobonou@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>3</td>
                     <td>NAÏMI</td>
                     <td>Amîr</td>
                     <td>naimiamir661@gmail.com</td>
-                </tr>  
+                </tr>
 
-                 <tr>
-                    <td>3</td>
-                    <td>SOSSOU</td>
-                    <td>AloïS</td>
-                    <td>christopheralois94@gmail.com</td>
-                </tr>  
-
-                 <tr>
-                    <td>4</td>
-                    <td>TOGOU</td>
-                    <td>Saidath</td>
-                    <td>saidath081@gmail.com</td>
-                 </tr>
-
-                 <tr>
-                     <th>5</th>
+                <tr>
+                     <th>4</th>
                     <th>ZANNOU</th>
                     <th>Caleb</th>
                     <th>calebzanboss16@gmail.com</th>   
-                </tr>        
+                </tr>  
+
+                <tr>
+                    <td>5</td>
+                    <td>ZIBO</td>
+                    <td>Falonne</td>
+                    <td>zibofalonne@gmail.com</td>
+                </tr>
+                       
             </tbody>
         </table>
     </div>
